[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sf85-86-validator"
version = "0.1.0"
description = "Local validation utilities for SF-85/SF-86 form review."
requires-python = ">=3.9"
dependencies = ["pypdf>=6.10.2"]

[project.scripts]
sf86-validate = "sf_validator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
